--- a/search.html
+++ b/search.html
@@ -233,6 +233,7 @@ margin-right: 0.3rem;
 <!-- App Frame -->
 <div id="app-frame">
 <div class="content-wrapper">
+  <div style="height: 30px;"></div>
 <h2>Accounts</h2>
 <div id="account-container"></div>
 <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
