--- a/search.html
+++ b/search.html
@@ -162,26 +162,26 @@ margin-right: 0.3rem;
     height: auto;
   }
 
-  #live-stats {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin: 0;
-    padding: 10px 6px; /* normal padding */
-    background-color: #1a1a1a;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(5, auto);
-    gap: 4px;
-    font-size: 0.85rem; /* normal font */
-    text-align: center;
-    border-radius: 0;
-    transform: translateY(0);
-    z-index: 1000;
-    transition: transform 0.3s ease-in-out;
-  }
+   #live-stats {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  margin: 0;
+  padding: 10px 6px;
+  font-size: 0.75rem;
+  background-color: #1a1a1a;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);  /* 2 per row */
+  grid-template-rows: repeat(5, auto);    /* 5 rows total */
+  text-align: center;
+  border-radius: 0;
+  transform: translateY(0);
+  z-index: 1000;
+  transition: transform 0.3s ease-in-out;
+  gap: 4px;
+}
 
   #app-frame {
     width: 100%;
