--- a/search.html
+++ b/search.html
@@ -210,6 +210,9 @@ margin-right: 0.3rem;
     border-bottom-right-radius: 0;
     z-index: 1000;
   }
+     .top-space {
+  height: 110px; /* matches the real height of your fixed stats bar */
+}
 }
 
 
@@ -237,6 +240,7 @@ margin-right: 0.3rem;
 <div id="app-frame">
 <div class="content-wrapper">
   <div style="height: 30px;"></div>
+   <div class="top-space"></div>
 <h2>Accounts</h2>
 <div id="account-container"></div>
 <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
