--- a/search.html
+++ b/search.html
@@ -31,6 +31,7 @@ justify-content: center;
 width: 100%;
 max-width: 1600px;
 height: 100vh;
+margin-top: 110px;
 }
 #live-stats {
 flex-shrink: 0;
@@ -239,8 +240,6 @@ margin-right: 0.3rem;
   <div class="layout-wrapper">
 <div id="app-frame">
 <div class="content-wrapper">
-  <div style="height: 30px;"></div>
-   <div class="top-space"></div>
 <h2>Accounts</h2>
 <div id="account-container"></div>
 <button id="toggleAccounts" onclick="toggleAccountView()">Show More</button>
