--- a/search.html
+++ b/search.html
@@ -155,6 +155,67 @@ color: #888;
 font-size: 1.3rem;
 margin-right: 0.3rem;
 }
+  @media (max-width: 768px) {
+  .layout-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 150px; /* create space below stats */
+    height: auto;
+  }
+
+  #live-stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    margin: 0;
+    padding: 10px 6px;
+    font-size: 0.75rem;
+    background-color: #1a1a1a;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    text-align: center;
+    border-radius: 0;
+    transform: translateY(0);
+    z-index: 1000;
+    transition: transform 0.3s ease-in-out;
+    gap: 4px;
+  }
+
+  #app-frame {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+
+  .content-wrapper {
+    padding-top: 1rem;
+    padding-bottom: 80px;
+    overflow-y: auto;
+    flex: 1;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    z-index: 1000;
+  }
+}
+
 </style>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
