--- a/publish.html
+++ b/publish.html
@@ -180,13 +180,72 @@ button:hover {
   margin-left: auto;
   margin-right: auto;
 }
+@media (max-width: 768px) {
+  .layout-wrapper {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 140px; /* Push the app-frame under the floating stats bar */
+    height: auto;
+  }
+
+  #live-stats {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    padding: 10px 6px;
+    background-color: #1a1a1a;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, auto);
+    text-align: center;
+    font-size: 0.75rem;
+    gap: 4px;
+    border-radius: 0;
+    z-index: 1000;
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out;
+  }
+
+  #app-frame {
+    width: 100%;
+    background-color: #0f0f0f;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
+
+  .content-wrapper {
+    padding-top: 1rem;
+    padding-bottom: 80px;
+    overflow-y: auto;
+    flex: 1;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #1a1a1a;
+    border-top: 1px solid #333;
+    display: flex;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    z-index: 1000;
+  }
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
 <body>
-  <div class="layout-wrapper">
+
     <!-- Live Stats Sidebar -->
       <div id="live-stats">
   <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
@@ -200,7 +259,7 @@ button:hover {
   <div>Posts Posted: <span id="stat-posts">0</span></div>
   <div>Profiles Visited: <span id="stat-profiles">0</span></div>
 </div>
-
+ <div class="layout-wrapper">
     <!-- App Frame -->
     <div id="app-frame">
       <div class="content-wrapper">
