--- a/publish.html
+++ b/publish.html
@@ -33,22 +33,23 @@
       height: 100vh;
     }
     #live-stats {
-      flex-shrink: 0;
-      width: 180px;
-      margin-right: 20px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding: 10px;
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-      position: sticky;
-      top: 20px;
-      height: fit-content;
-      font-size: 0.85rem;
-      line-height: 1.6;
-    }
+  flex-shrink: 0;
+  width: 180px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 10px;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  position: sticky; /* ✅ Important */
+  top: 20px; /* ✅ Important */
+  height: fit-content;
+  font-size: 0.85rem;
+  line-height: 1.6;
+}
+
     #app-frame {
       width: min(645px, 95vw);
       height: 100vh;
@@ -188,12 +189,13 @@ button:hover {
     height: auto;
   }
 
-  #live-stats {
-    position: fixed;
+ #live-stats {
+    position: fixed; /* ✅ only mobile gets fixed */
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
+    margin: 0;
     padding: 10px 6px;
     background-color: #1a1a1a;
     display: grid;
@@ -207,7 +209,6 @@ button:hover {
     transform: translateY(0);
     transition: transform 0.3s ease-in-out;
   }
-
   #app-frame {
     width: 100%;
     background-color: #0f0f0f;
