--- a/reels.html
+++ b/reels.html
@@ -19,29 +19,30 @@ justify-content: center;
 align-items: center;
 }
 .layout-wrapper {
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-max-width: 1600px;
-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 100vh;
 }
+
 #live-stats {
-flex-shrink: 0;
-width: 180px;
-margin-right: 20px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-padding: 10px;
-background-color: #1a1a1a;
-border-radius: 12px;
-box-shadow: 0 0 10px rgba(0,0,0,0.5);
-font-size: 0.85rem;
-line-height: 1.6;
-position: sticky;
-top: 20px;
-height: fit-content;
+  flex-shrink: 0;
+  width: 180px;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 10px;
+  background-color: #1a1a1a;
+  border-radius: 12px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  font-size: 0.85rem;
+  line-height: 1.6;
+  position: sticky;
+  top: 20px;
+  height: fit-content;
 }
 #app-frame {
   width: 100%;
@@ -208,7 +209,7 @@ z-index: 2;
 20% { opacity: 1; }
 100% { opacity: 0; transform: translateX(-50%) translateY(-20px); }
 }
- @media (max-width: 768px) {
+@media (max-width: 768px) {
   html, body {
     height: auto;
     overflow-y: auto;
@@ -238,9 +239,11 @@ z-index: 2;
     text-align: center;
     border-radius: 0;
     z-index: 1000;
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out;
   }
 
- #app-frame {
+  #app-frame {
     width: 100%;
     background-color: #0f0f0f;
     border-radius: 0;
@@ -250,7 +253,7 @@ z-index: 2;
     min-height: calc(100vh - 80px);
   }
 
-.content-wrapper {
+  .content-wrapper {
     padding-top: 0;
     padding-bottom: 80px;
     flex: 1;
@@ -274,6 +277,7 @@ z-index: 2;
   }
 }
 
+
 </style>
   <script src="https://unpkg.com/lucide@latest"></script>
 
@@ -293,8 +297,8 @@ z-index: 2;
 </div>
  
  <div class="layout-wrapper">
-<div style="height: 130px;"></div>
 <div id="app-frame">
+ <div style="height: 130px;"></div>
 <div class="content-wrapper" id="reelWrapper">
 </div> <!-- closes .content-wrapper -->
 
